[package]
name = "collateral-vault"
version = "0.1.0"
description = "CipherVault collateral accounting — dWallet registration, health monitoring, and cross-chain collateral tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateral_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
fhe-integration = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# encrypt-anchor = { version = "0.1.0", optional = true }
# Uncomment when encrypt-anchor is published. Gate behind fhe-integration feature.
