[package]
name = "trustmesh"
version = "0.1.0"
description = "TrustMesh onchain trust and delegation log"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustmesh"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# Keep BLAKE3 on the digest 0.10 stack so the Solana SBF Rust 1.79 toolchain
# doesn't pull in block-buffer 0.12 / edition2024-only crates.
blake3 = "=1.5.5"
